--- a/mvc_pattern/mvc_pattern/WebContent/copyright.html
+++ b/mvc_pattern/mvc_pattern/WebContent/copyright.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="utf-8">
 <title>Insert title here</title>
 
 <link rel="stylesheet" type = "text/css" href="css/index.css">
